deployment/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    app: nginx      
spec:
  selector:
    app: nginx      
  type: NodePort
  ports: 
  - port: 80
    targetPort: 80
    nodePort: 30080
    name: http
